parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> calc
Rule 1     calc -> expression
Rule 2     calc -> var_assign
Rule 3     calc -> empty
Rule 4     var_assign -> NAME EQUALS expression
Rule 5     expression -> expression MULTIPLY expression
Rule 6     expression -> expression DIVIDE expression
Rule 7     expression -> expression PLUS expression
Rule 8     expression -> expression MINUS expression
Rule 9     expression -> expression POTENCY expression
Rule 10    expression -> INT
Rule 11    expression -> FLOAT
Rule 12    expression -> PARENTHESES_L expression PARENTHESES_R
Rule 13    expression -> NAME
Rule 14    empty -> <empty>

Terminals, with rules where they appear

DIVIDE               : 6
EQUALS               : 4
FLOAT                : 11
INT                  : 10
MINUS                : 8
MULTIPLY             : 5
NAME                 : 4 13
PARENTHESES_L        : 12
PARENTHESES_R        : 12
PLUS                 : 7
POTENCY              : 9
error                : 

Nonterminals, with rules where they appear

calc                 : 0
empty                : 3
expression           : 1 4 5 5 6 6 7 7 8 8 9 9 12
var_assign           : 2

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . expression
    (2) calc -> . var_assign
    (3) calc -> . empty
    (5) expression -> . expression MULTIPLY expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression POTENCY expression
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . PARENTHESES_L expression PARENTHESES_R
    (13) expression -> . NAME
    (4) var_assign -> . NAME EQUALS expression
    (14) empty -> .

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    PARENTHESES_L   shift and go to state 7
    NAME            shift and go to state 8
    $end            reduce using rule 14 (empty -> .)

    calc                           shift and go to state 1
    expression                     shift and go to state 2
    var_assign                     shift and go to state 3
    empty                          shift and go to state 4

state 1

    (0) S' -> calc .



state 2

    (1) calc -> expression .
    (5) expression -> expression . MULTIPLY expression
    (6) expression -> expression . DIVIDE expression
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . POTENCY expression

    $end            reduce using rule 1 (calc -> expression .)
    MULTIPLY        shift and go to state 9
    DIVIDE          shift and go to state 10
    PLUS            shift and go to state 11
    MINUS           shift and go to state 12
    POTENCY         shift and go to state 13


state 3

    (2) calc -> var_assign .

    $end            reduce using rule 2 (calc -> var_assign .)


state 4

    (3) calc -> empty .

    $end            reduce using rule 3 (calc -> empty .)


state 5

    (10) expression -> INT .

    MULTIPLY        reduce using rule 10 (expression -> INT .)
    DIVIDE          reduce using rule 10 (expression -> INT .)
    PLUS            reduce using rule 10 (expression -> INT .)
    MINUS           reduce using rule 10 (expression -> INT .)
    POTENCY         reduce using rule 10 (expression -> INT .)
    $end            reduce using rule 10 (expression -> INT .)
    PARENTHESES_R   reduce using rule 10 (expression -> INT .)


state 6

    (11) expression -> FLOAT .

    MULTIPLY        reduce using rule 11 (expression -> FLOAT .)
    DIVIDE          reduce using rule 11 (expression -> FLOAT .)
    PLUS            reduce using rule 11 (expression -> FLOAT .)
    MINUS           reduce using rule 11 (expression -> FLOAT .)
    POTENCY         reduce using rule 11 (expression -> FLOAT .)
    $end            reduce using rule 11 (expression -> FLOAT .)
    PARENTHESES_R   reduce using rule 11 (expression -> FLOAT .)


state 7

    (12) expression -> PARENTHESES_L . expression PARENTHESES_R
    (5) expression -> . expression MULTIPLY expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression POTENCY expression
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . PARENTHESES_L expression PARENTHESES_R
    (13) expression -> . NAME

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    PARENTHESES_L   shift and go to state 7
    NAME            shift and go to state 15

    expression                     shift and go to state 14

state 8

    (13) expression -> NAME .
    (4) var_assign -> NAME . EQUALS expression

    MULTIPLY        reduce using rule 13 (expression -> NAME .)
    DIVIDE          reduce using rule 13 (expression -> NAME .)
    PLUS            reduce using rule 13 (expression -> NAME .)
    MINUS           reduce using rule 13 (expression -> NAME .)
    POTENCY         reduce using rule 13 (expression -> NAME .)
    $end            reduce using rule 13 (expression -> NAME .)
    EQUALS          shift and go to state 16


state 9

    (5) expression -> expression MULTIPLY . expression
    (5) expression -> . expression MULTIPLY expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression POTENCY expression
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . PARENTHESES_L expression PARENTHESES_R
    (13) expression -> . NAME

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    PARENTHESES_L   shift and go to state 7
    NAME            shift and go to state 15

    expression                     shift and go to state 17

state 10

    (6) expression -> expression DIVIDE . expression
    (5) expression -> . expression MULTIPLY expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression POTENCY expression
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . PARENTHESES_L expression PARENTHESES_R
    (13) expression -> . NAME

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    PARENTHESES_L   shift and go to state 7
    NAME            shift and go to state 15

    expression                     shift and go to state 18

state 11

    (7) expression -> expression PLUS . expression
    (5) expression -> . expression MULTIPLY expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression POTENCY expression
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . PARENTHESES_L expression PARENTHESES_R
    (13) expression -> . NAME

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    PARENTHESES_L   shift and go to state 7
    NAME            shift and go to state 15

    expression                     shift and go to state 19

state 12

    (8) expression -> expression MINUS . expression
    (5) expression -> . expression MULTIPLY expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression POTENCY expression
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . PARENTHESES_L expression PARENTHESES_R
    (13) expression -> . NAME

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    PARENTHESES_L   shift and go to state 7
    NAME            shift and go to state 15

    expression                     shift and go to state 20

state 13

    (9) expression -> expression POTENCY . expression
    (5) expression -> . expression MULTIPLY expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression POTENCY expression
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . PARENTHESES_L expression PARENTHESES_R
    (13) expression -> . NAME

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    PARENTHESES_L   shift and go to state 7
    NAME            shift and go to state 15

    expression                     shift and go to state 21

state 14

    (12) expression -> PARENTHESES_L expression . PARENTHESES_R
    (5) expression -> expression . MULTIPLY expression
    (6) expression -> expression . DIVIDE expression
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . POTENCY expression

    PARENTHESES_R   shift and go to state 22
    MULTIPLY        shift and go to state 9
    DIVIDE          shift and go to state 10
    PLUS            shift and go to state 11
    MINUS           shift and go to state 12
    POTENCY         shift and go to state 13


state 15

    (13) expression -> NAME .

    PARENTHESES_R   reduce using rule 13 (expression -> NAME .)
    MULTIPLY        reduce using rule 13 (expression -> NAME .)
    DIVIDE          reduce using rule 13 (expression -> NAME .)
    PLUS            reduce using rule 13 (expression -> NAME .)
    MINUS           reduce using rule 13 (expression -> NAME .)
    POTENCY         reduce using rule 13 (expression -> NAME .)
    $end            reduce using rule 13 (expression -> NAME .)


state 16

    (4) var_assign -> NAME EQUALS . expression
    (5) expression -> . expression MULTIPLY expression
    (6) expression -> . expression DIVIDE expression
    (7) expression -> . expression PLUS expression
    (8) expression -> . expression MINUS expression
    (9) expression -> . expression POTENCY expression
    (10) expression -> . INT
    (11) expression -> . FLOAT
    (12) expression -> . PARENTHESES_L expression PARENTHESES_R
    (13) expression -> . NAME

    INT             shift and go to state 5
    FLOAT           shift and go to state 6
    PARENTHESES_L   shift and go to state 7
    NAME            shift and go to state 15

    expression                     shift and go to state 23

state 17

    (5) expression -> expression MULTIPLY expression .
    (5) expression -> expression . MULTIPLY expression
    (6) expression -> expression . DIVIDE expression
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . POTENCY expression

    MULTIPLY        reduce using rule 5 (expression -> expression MULTIPLY expression .)
    DIVIDE          reduce using rule 5 (expression -> expression MULTIPLY expression .)
    PLUS            reduce using rule 5 (expression -> expression MULTIPLY expression .)
    MINUS           reduce using rule 5 (expression -> expression MULTIPLY expression .)
    POTENCY         reduce using rule 5 (expression -> expression MULTIPLY expression .)
    $end            reduce using rule 5 (expression -> expression MULTIPLY expression .)
    PARENTHESES_R   reduce using rule 5 (expression -> expression MULTIPLY expression .)

  ! MULTIPLY        [ shift and go to state 9 ]
  ! DIVIDE          [ shift and go to state 10 ]
  ! PLUS            [ shift and go to state 11 ]
  ! MINUS           [ shift and go to state 12 ]
  ! POTENCY         [ shift and go to state 13 ]


state 18

    (6) expression -> expression DIVIDE expression .
    (5) expression -> expression . MULTIPLY expression
    (6) expression -> expression . DIVIDE expression
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . POTENCY expression

    MULTIPLY        reduce using rule 6 (expression -> expression DIVIDE expression .)
    DIVIDE          reduce using rule 6 (expression -> expression DIVIDE expression .)
    PLUS            reduce using rule 6 (expression -> expression DIVIDE expression .)
    MINUS           reduce using rule 6 (expression -> expression DIVIDE expression .)
    POTENCY         reduce using rule 6 (expression -> expression DIVIDE expression .)
    $end            reduce using rule 6 (expression -> expression DIVIDE expression .)
    PARENTHESES_R   reduce using rule 6 (expression -> expression DIVIDE expression .)

  ! MULTIPLY        [ shift and go to state 9 ]
  ! DIVIDE          [ shift and go to state 10 ]
  ! PLUS            [ shift and go to state 11 ]
  ! MINUS           [ shift and go to state 12 ]
  ! POTENCY         [ shift and go to state 13 ]


state 19

    (7) expression -> expression PLUS expression .
    (5) expression -> expression . MULTIPLY expression
    (6) expression -> expression . DIVIDE expression
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . POTENCY expression

    PLUS            reduce using rule 7 (expression -> expression PLUS expression .)
    MINUS           reduce using rule 7 (expression -> expression PLUS expression .)
    POTENCY         reduce using rule 7 (expression -> expression PLUS expression .)
    $end            reduce using rule 7 (expression -> expression PLUS expression .)
    PARENTHESES_R   reduce using rule 7 (expression -> expression PLUS expression .)
    MULTIPLY        shift and go to state 9
    DIVIDE          shift and go to state 10

  ! MULTIPLY        [ reduce using rule 7 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 7 (expression -> expression PLUS expression .) ]
  ! PLUS            [ shift and go to state 11 ]
  ! MINUS           [ shift and go to state 12 ]
  ! POTENCY         [ shift and go to state 13 ]


state 20

    (8) expression -> expression MINUS expression .
    (5) expression -> expression . MULTIPLY expression
    (6) expression -> expression . DIVIDE expression
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . POTENCY expression

    PLUS            reduce using rule 8 (expression -> expression MINUS expression .)
    MINUS           reduce using rule 8 (expression -> expression MINUS expression .)
    POTENCY         reduce using rule 8 (expression -> expression MINUS expression .)
    $end            reduce using rule 8 (expression -> expression MINUS expression .)
    PARENTHESES_R   reduce using rule 8 (expression -> expression MINUS expression .)
    MULTIPLY        shift and go to state 9
    DIVIDE          shift and go to state 10

  ! MULTIPLY        [ reduce using rule 8 (expression -> expression MINUS expression .) ]
  ! DIVIDE          [ reduce using rule 8 (expression -> expression MINUS expression .) ]
  ! PLUS            [ shift and go to state 11 ]
  ! MINUS           [ shift and go to state 12 ]
  ! POTENCY         [ shift and go to state 13 ]


state 21

    (9) expression -> expression POTENCY expression .
    (5) expression -> expression . MULTIPLY expression
    (6) expression -> expression . DIVIDE expression
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . POTENCY expression

  ! shift/reduce conflict for MULTIPLY resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for POTENCY resolved as shift
    $end            reduce using rule 9 (expression -> expression POTENCY expression .)
    PARENTHESES_R   reduce using rule 9 (expression -> expression POTENCY expression .)
    MULTIPLY        shift and go to state 9
    DIVIDE          shift and go to state 10
    PLUS            shift and go to state 11
    MINUS           shift and go to state 12
    POTENCY         shift and go to state 13

  ! MULTIPLY        [ reduce using rule 9 (expression -> expression POTENCY expression .) ]
  ! DIVIDE          [ reduce using rule 9 (expression -> expression POTENCY expression .) ]
  ! PLUS            [ reduce using rule 9 (expression -> expression POTENCY expression .) ]
  ! MINUS           [ reduce using rule 9 (expression -> expression POTENCY expression .) ]
  ! POTENCY         [ reduce using rule 9 (expression -> expression POTENCY expression .) ]


state 22

    (12) expression -> PARENTHESES_L expression PARENTHESES_R .

    MULTIPLY        reduce using rule 12 (expression -> PARENTHESES_L expression PARENTHESES_R .)
    DIVIDE          reduce using rule 12 (expression -> PARENTHESES_L expression PARENTHESES_R .)
    PLUS            reduce using rule 12 (expression -> PARENTHESES_L expression PARENTHESES_R .)
    MINUS           reduce using rule 12 (expression -> PARENTHESES_L expression PARENTHESES_R .)
    POTENCY         reduce using rule 12 (expression -> PARENTHESES_L expression PARENTHESES_R .)
    $end            reduce using rule 12 (expression -> PARENTHESES_L expression PARENTHESES_R .)
    PARENTHESES_R   reduce using rule 12 (expression -> PARENTHESES_L expression PARENTHESES_R .)


state 23

    (4) var_assign -> NAME EQUALS expression .
    (5) expression -> expression . MULTIPLY expression
    (6) expression -> expression . DIVIDE expression
    (7) expression -> expression . PLUS expression
    (8) expression -> expression . MINUS expression
    (9) expression -> expression . POTENCY expression

    $end            reduce using rule 4 (var_assign -> NAME EQUALS expression .)
    MULTIPLY        shift and go to state 9
    DIVIDE          shift and go to state 10
    PLUS            shift and go to state 11
    MINUS           shift and go to state 12
    POTENCY         shift and go to state 13

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for MULTIPLY in state 21 resolved as shift
WARNING: shift/reduce conflict for DIVIDE in state 21 resolved as shift
WARNING: shift/reduce conflict for PLUS in state 21 resolved as shift
WARNING: shift/reduce conflict for MINUS in state 21 resolved as shift
WARNING: shift/reduce conflict for POTENCY in state 21 resolved as shift
